--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -1,7 +1,50 @@
 <p-panel header="Pipes personalizados" class="p-1">
   <p>
-    Pipes personalizados - creados por {{"nosotros" | toggleCase:true}}
+    Pipes personalizados - creados por {{"nosotros" | toggleCase:isUpperCase}}
   </p>
 </p-panel>
 
+<div class="card">
+  <p-toolbar>
 
+    <div class="p-toolbar-group-start">
+
+      <p-button label="ToggleCase" icon="pi pi-search" (onClick)="toggleUpperCase()" />
+
+    </div>
+
+    <div class="p-toolbar-group-end">
+      <p-button class="mr-2" label="Por nombre" icon="pi pi-sort" styleClass="p-button-success" />
+
+      <p-button class="mr-2" label="Por color" icon="pi pi-sort" styleClass="p-button-danger" />
+
+      <p-button class="mr-2" label="Por volar" icon="pi pi-sort" styleClass="p-button-help" />
+    </div>
+
+  </p-toolbar>
+</div>
+
+<div class="grid">
+  <div class="col mt-2">
+
+    <p-panel header="Heroes">
+      <p-table [value]="heroes" [tableStyle]="{ 'min-width': '50rem' }">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Nombre</th>
+            <th>¿Puede volar?</th>
+            <th>Color</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-hero>
+          <tr>
+            <td>{{ hero.name }}</td>
+            <td>{{ hero.canFly | canFly}}</td>
+            <td>{{ hero.color }}</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </p-panel>
+
+  </div>
+</div>
