--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -14,11 +14,11 @@
     </div>
 
     <div class="p-toolbar-group-end">
-      <p-button class="mr-2" label="Por nombre" icon="pi pi-sort" styleClass="p-button-success" />
+      <p-button class="mr-2" (onClick)="changeOrder('name')" label="Por nombre" icon="pi pi-sort" styleClass="p-button-success" />
 
-      <p-button class="mr-2" label="Por color" icon="pi pi-sort" styleClass="p-button-danger" />
+      <p-button class="mr-2" (onClick)="changeOrder('color')"  label="Por color" icon="pi pi-sort" styleClass="p-button-danger" />
 
-      <p-button class="mr-2" label="Por volar" icon="pi pi-sort" styleClass="p-button-help" />
+      <p-button class="mr-2" (onClick)="changeOrder('canFly')"  label="Por volar" icon="pi pi-sort" styleClass="p-button-help" />
     </div>
 
   </p-toolbar>
@@ -28,7 +28,7 @@
   <div class="col mt-2">
 
     <p-panel header="Heroes">
-      <p-table [value]="heroes" [tableStyle]="{ 'min-width': '50rem' }">
+      <p-table [value]="heroes | sortBy: orderBy" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
           <tr>
             <th>Nombre</th>
